@@ -1896,3 +1896,6 @@ Created rcollate program to resize and transpose matrix data for Andy
 McNeil's 5-phase annual simulation method.
 
 Added epw2wea conversion program by Christoph Reinhart.
+
+Implemented Perlin's improved noise function with help from Rahul Narain.
+This will change the appearance of renderings using this function.
